# OpenEngine

./: .gitignore  CMakeLists.txt
dependencies/glew-2.1.0/auto/src/: eglew_head.h  eglew_mid.h  eglew_tail.h  glew_head.c  glew_head.h  glew_tail.h  (+25 more)
dependencies/glfw-3.4/examples/: boing.c  gears.c  heightmap.c  offscreen.c  particles.c  sharing.c  splitview.c  triangle-opengl.c  triangle-opengles.c  wave.c  windows.c
dependencies/glfw-3.4/src/: cocoa_joystick.h  cocoa_platform.h  cocoa_time.c  cocoa_time.h  context.c  egl_context.c  glx_context.c  init.c  input.c  internal.h  linux_joystick.c  linux_joystick.h  mappings.h  monitor.c  null_init.c  null_joystick.c  null_joystick.h  null_monitor.c  null_platform.h  null_window.c  osmesa_context.c  platform.c  platform.h  posix_module.c  posix_poll.c  posix_poll.h  posix_thread.c  posix_thread.h  posix_time.c  posix_time.h  vulkan.c  wgl_context.c  win32_init.c  win32_joystick.c  win32_joystick.h  win32_module.c  win32_monitor.c  win32_platform.h  win32_thread.c  win32_thread.h  (+14 more)
dependencies/glfw-3.4/tests/: allocator.c  clipboard.c  cursor.c  empty.c  events.c  gamma.c  glfwinfo.c  icon.c  iconify.c  inputlag.c  joysticks.c  monitors.c  msaa.c  reopen.c  tearing.c  threads.c  timeout.c  title.c  triangle-vulkan.c  window.c
dependencies/glm/glm/: common.hpp  exponential.hpp  ext.hpp  fwd.hpp  geometric.hpp  glm.hpp  integer.hpp  matrix.hpp  trigonometric.hpp  vec2.hpp  vec3.hpp  vec4.hpp
include/: aabb.h  cube.h  plane.h  player.h  shader.h
src/: cube.cpp  fShader.glsl  main.cpp  plane.cpp  player.cpp  vShader.glsl
(+174 files in other folders)
